--- a/00-EDA/EDA.ipynb
+++ b/00-EDA/EDA.ipynb
@@ -648,16 +648,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the mapping dictionary\n",
-    "mapping = {'NE': 0, 'SE': 1, 'NW': 2, 'cv': 3}\n",
-    "\n",
-    "# Replace the string values with numerical values\n",
-    "df['wnd_dir'] = df['wnd_dir'].map(mapping)\n",
-    "df['wnd_dir'] = df['wnd_dir'].map(mapping)"
+    "mapping = {'NE': 0, 'SE': 1, 'NW': 2, 'cv': 3}\n"
    ]
   },
   {
