--- a/Matt W/LSTM_practice.ipynb
+++ b/Matt W/LSTM_practice.ipynb
@@ -10,7 +10,378 @@
     "hidden layers. This phenomenon may even lead to a decrease of accuracy rate as hidden layers\n",
     "increase [25]. However, the smart design of the memory cell in LSTM can effectively solve the problem\n",
     "of gradient vanishing in backpropagation and can learn the input sequence with longer time steps.\n",
-    "Hence, LSTM is commonly used for solving applications related to time serial issues. \""
+    "Hence, LSTM is commonly used for solving applications related to time serial issues. \"\n",
+    "\n",
+    "- LSTMs are a type of recurrent network, and as such are designed to take sequence data as input, unlike other models where lag observations must be presented as input features.\n",
+    "- LSTMs directly support multiple parallel input sequences for multivariate inputs, unlike other models where multivariate inputs are presented in a flat structure.\n",
+    "- Like other neural networks, LSTMs are able to map input data directly to an output vector that may represent multiple output time steps.\n",
+    "\n",
+    "- A popular approach has been to combine CNNs with LSTMs, where the CNN is as an encoder to learn features from sub-sequences of input data which are provided as time steps to an LSTM. This architecture is called a CNN-LSTM.\n",
+    "- A power variation on the CNN LSTM architecture is the ConvLSTM that uses the convolutional reading of input subsequences directly within an LSTM’s units. This approach has proven very effective for time series classification and can be adapted for use in multi-step time series forecasting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import pickle \n",
+    "import sklearn "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/train_data.pickle', 'rb') as f:\n",
+    "    train_data = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/test_data.pickle', 'rb') as f:\n",
+    "    test_data = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pollution</th>\n",
+       "      <th>dew</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>press</th>\n",
+       "      <th>wnd_dir</th>\n",
+       "      <th>wnd_spd</th>\n",
+       "      <th>snow</th>\n",
+       "      <th>rain</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2010-01-02 00:00:00</th>\n",
+       "      <td>0.129779</td>\n",
+       "      <td>0.352941</td>\n",
+       "      <td>0.245902</td>\n",
+       "      <td>0.527273</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.002290</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-02 01:00:00</th>\n",
+       "      <td>0.148893</td>\n",
+       "      <td>0.367647</td>\n",
+       "      <td>0.245902</td>\n",
+       "      <td>0.527273</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.003811</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-02 02:00:00</th>\n",
+       "      <td>0.159960</td>\n",
+       "      <td>0.426471</td>\n",
+       "      <td>0.229508</td>\n",
+       "      <td>0.545455</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.005332</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-02 03:00:00</th>\n",
+       "      <td>0.182093</td>\n",
+       "      <td>0.485294</td>\n",
+       "      <td>0.229508</td>\n",
+       "      <td>0.563636</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.008391</td>\n",
+       "      <td>0.037037</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-02 04:00:00</th>\n",
+       "      <td>0.138833</td>\n",
+       "      <td>0.485294</td>\n",
+       "      <td>0.229508</td>\n",
+       "      <td>0.563636</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.009912</td>\n",
+       "      <td>0.074074</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     pollution       dew      temp     press   wnd_dir  \\\n",
+       "date                                                                     \n",
+       "2010-01-02 00:00:00   0.129779  0.352941  0.245902  0.527273  0.333333   \n",
+       "2010-01-02 01:00:00   0.148893  0.367647  0.245902  0.527273  0.333333   \n",
+       "2010-01-02 02:00:00   0.159960  0.426471  0.229508  0.545455  0.333333   \n",
+       "2010-01-02 03:00:00   0.182093  0.485294  0.229508  0.563636  0.333333   \n",
+       "2010-01-02 04:00:00   0.138833  0.485294  0.229508  0.563636  0.333333   \n",
+       "\n",
+       "                      wnd_spd      snow  rain  \n",
+       "date                                           \n",
+       "2010-01-02 00:00:00  0.002290  0.000000   0.0  \n",
+       "2010-01-02 01:00:00  0.003811  0.000000   0.0  \n",
+       "2010-01-02 02:00:00  0.005332  0.000000   0.0  \n",
+       "2010-01-02 03:00:00  0.008391  0.037037   0.0  \n",
+       "2010-01-02 04:00:00  0.009912  0.074074   0.0  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#def evaluate_forecasts(actual, predicted):\n",
+    "train_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pollution</th>\n",
+       "      <th>dew</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>press</th>\n",
+       "      <th>wnd_dir</th>\n",
+       "      <th>wnd_spd</th>\n",
+       "      <th>snow</th>\n",
+       "      <th>rain</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2014-12-18 00:00:00</th>\n",
+       "      <td>0.181087</td>\n",
+       "      <td>0.397059</td>\n",
+       "      <td>0.213115</td>\n",
+       "      <td>0.709091</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.002290</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-12-18 01:00:00</th>\n",
+       "      <td>0.171026</td>\n",
+       "      <td>0.397059</td>\n",
+       "      <td>0.196721</td>\n",
+       "      <td>0.709091</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.000752</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-12-18 02:00:00</th>\n",
+       "      <td>0.160966</td>\n",
+       "      <td>0.397059</td>\n",
+       "      <td>0.196721</td>\n",
+       "      <td>0.709091</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.003811</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-12-18 03:00:00</th>\n",
+       "      <td>0.146881</td>\n",
+       "      <td>0.382353</td>\n",
+       "      <td>0.163934</td>\n",
+       "      <td>0.727273</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.006870</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-12-18 04:00:00</th>\n",
+       "      <td>0.125755</td>\n",
+       "      <td>0.382353</td>\n",
+       "      <td>0.180328</td>\n",
+       "      <td>0.709091</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.012219</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     pollution       dew      temp     press   wnd_dir  \\\n",
+       "date                                                                     \n",
+       "2014-12-18 00:00:00   0.181087  0.397059  0.213115  0.709091  0.000000   \n",
+       "2014-12-18 01:00:00   0.171026  0.397059  0.196721  0.709091  0.666667   \n",
+       "2014-12-18 02:00:00   0.160966  0.397059  0.196721  0.709091  0.666667   \n",
+       "2014-12-18 03:00:00   0.146881  0.382353  0.163934  0.727273  0.666667   \n",
+       "2014-12-18 04:00:00   0.125755  0.382353  0.180328  0.709091  0.666667   \n",
+       "\n",
+       "                      wnd_spd  snow  rain  \n",
+       "date                                       \n",
+       "2014-12-18 00:00:00  0.002290   0.0   0.0  \n",
+       "2014-12-18 01:00:00  0.000752   0.0   0.0  \n",
+       "2014-12-18 02:00:00  0.003811   0.0   0.0  \n",
+       "2014-12-18 03:00:00  0.006870   0.0   0.0  \n",
+       "2014-12-18 04:00:00  0.012219   0.0   0.0  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Moving Window CV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The LSTM takes sequences of inputs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_sequence(df,N, window_size):\n",
+    " \n",
+    "    #We generate sequences of size 10\n",
+    "    X_sequences = [df.iloc[i:i+window_size].values for i in range(N - window_size)]\n",
+    "    #And for each sequence evaluate agains the pollution value following each sequence\n",
+    "    Y_values = [df.iloc[i+window_size]['pollution'] for i in range(N - window_size)]\n",
+    "\n",
+    "    return np.array(X_sequences), np.array(Y_values)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Limit of sequence size is related to vanishing gradient problem. This can limit how well an LSTM can learn dependencies far back in the sequence, especially if the model isn’t deep enough to capture long-term patterns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(43440, 24, 8) (43440,)\n",
+      "(312, 24, 8) (312,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "window_size = 24\n",
+    "N= len(train_data)\n",
+    "X_train, y_train = generate_sequence(train_data,N, window_size)\n",
+    "print(X_train.shape, y_train.shape)\n",
+    "\n",
+    "M=len(test_data)\n",
+    "X_test, y_test = generate_sequence(test_data,M,window_size)\n",
+    "print(X_test.shape,y_test.shape)\n"
    ]
   },
   {
@@ -22,8 +393,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
