--- a/00-EDA/EDA.ipynb
+++ b/00-EDA/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "(43800, 8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "2010-01-02 04:00:00      138.0   -7  -5.0  1022.0      SE     6.25     2     0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "(43800, 8)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "2010-01-02 04:00:00      138.0   -7  -5.0  1022.0      SE     6.25     2     0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "['pollution', 'dew', 'temp', 'press', 'wnd_dir', 'wnd_spd', 'snow', 'rain']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "max       27.000000     36.000000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "array(['SE', 'cv', 'NW', 'NE'], dtype=object)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
        "2010-01-02 04:00:00     0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +827,7 @@
        "((43464, 8), (336, 8))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,32 +850,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n",
+    "from pickle import dump\n",
     "# Create a scaler object\n",
-    "scaler = MinMaxScaler(feature_range=(0,1))\n",
-    "\n",
+    "scaler = MinMaxScaler()\n",
+    "df_train = df_train.copy()\n",
+    "df_test = df_test.copy()\n",
     "\n",
     "# Define the columns to scale\n",
     "columns = (['pollution', 'dew', 'temp', 'press', 'wnd_spd', \n",
     "            'snow', 'rain' , \"wnd_dir\"])\n",
+    "\n",
     "#Scale the selected columns to the range 0-1. \n",
     "# We allow the same scaler to be used for test set as this has no risk of data leakage\n",
     "\n",
-    "df_train.loc[:,columns] = scaler.fit_transform(df_train[columns])\n",
-    "df_test.loc[:,columns] = scaler.transform(df_test[columns])\n",
+    "df_train[columns] = scaler.fit_transform(df_train[columns])\n",
+    "df_test[columns] = scaler.transform(df_test[columns])\n",
     "\n",
-    "\n",
+    "#Save the scaler\n",
+    "dump(scaler, open('../data/scaler.pickle', 'wb'))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +1001,7 @@
        "2010-01-02 04:00:00  0.009912  0.074074   0.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -1064,8 +1067,8 @@
        "      <td>0.709091</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.002290</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-12-18 01:00:00</th>\n",
@@ -1075,8 +1078,8 @@
        "      <td>0.709091</td>\n",
        "      <td>0.666667</td>\n",
        "      <td>0.000752</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-12-18 02:00:00</th>\n",
@@ -1086,8 +1089,8 @@
        "      <td>0.709091</td>\n",
        "      <td>0.666667</td>\n",
        "      <td>0.003811</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-12-18 03:00:00</th>\n",
@@ -1097,8 +1100,8 @@
        "      <td>0.727273</td>\n",
        "      <td>0.666667</td>\n",
        "      <td>0.006870</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-12-18 04:00:00</th>\n",
@@ -1108,8 +1111,8 @@
        "      <td>0.709091</td>\n",
        "      <td>0.666667</td>\n",
        "      <td>0.012219</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1126,14 +1129,14 @@
        "\n",
        "                      wnd_spd  snow  rain  \n",
        "date                                       \n",
-       "2014-12-18 00:00:00  0.002290     0     0  \n",
-       "2014-12-18 01:00:00  0.000752     0     0  \n",
-       "2014-12-18 02:00:00  0.003811     0     0  \n",
-       "2014-12-18 03:00:00  0.006870     0     0  \n",
-       "2014-12-18 04:00:00  0.012219     0     0  "
+       "2014-12-18 00:00:00  0.002290   0.0   0.0  \n",
+       "2014-12-18 01:00:00  0.000752   0.0   0.0  \n",
+       "2014-12-18 02:00:00  0.003811   0.0   0.0  \n",
+       "2014-12-18 03:00:00  0.006870   0.0   0.0  \n",
+       "2014-12-18 04:00:00  0.012219   0.0   0.0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
