--- a/Matt W/LSTM_practice.ipynb
+++ b/Matt W/LSTM_practice.ipynb
@@ -566,7 +566,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Standard LSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_steps = X_train.shape[1]\n",
+    "n_features = X_train.shape[2]\n",
+    "\n",
+    "MV_LSTM = Sequential()\n",
+    "MV_LSTM.add(Input(shape =(n_steps, n_features)))\n",
+    "MV_LSTM.add(LSTM(50))\n",
+    "#MV_LSTM.add(Droput(0.2)) prevents overfitting by randomly dropping out 20% of neurons \n",
+    "\n",
+    "MV_LSTM.add(Dense(1))\n",
+    "\n",
+    "#Compile the model\n",
+    "metrics=\"RootMeanSquaredError()\"\n",
+    "optimzer=\"adam\"\n",
+    "loss = 'mse'\n",
+    "\n",
+    "MV_LSTM.compile(optimizer=Adam(learning_rate = 0.001), loss=loss, metrics = [RootMeanSquaredError()])\n",
+    "\n",
+    "\n",
+    "MV_LSTM.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fit model\n",
+    "history = MV_LSTM.fit(X_train, y_train, epochs=150, verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Stacked LSTM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Every LSTM layer should be accompanied by a Dropout layer. This layer will help to prevent overfitting by ignoring randomly selected neurons during training, and hence reduces the sensitivity to the specific weights of individual neurons. 20% is often used as a good compromise between retaining model accuracy and preventing overfitting."
    ]
   },
   {
