--- a/00-EDA/EDA.ipynb
+++ b/00-EDA/EDA.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "(43800, 8)"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "2010-01-02 04:00:00      138.0   -7  -5.0  1022.0      SE     6.25     2     0"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "(43800, 8)"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "2010-01-02 04:00:00      138.0   -7  -5.0  1022.0      SE     6.25     2     0"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "['pollution', 'dew', 'temp', 'press', 'wnd_dir', 'wnd_spd', 'snow', 'rain']"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "max       27.000000     36.000000  "
       ]
      },
-     "execution_count": 275,
+     "execution_count": 311,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 312,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 313,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "array(['SE', 'cv', 'NW', 'NE'], dtype=object)"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
        "2010-01-02 04:00:00     0  "
       ]
      },
-     "execution_count": 280,
+     "execution_count": 316,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,40 +803,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#cor_cols = df.columns.tolist()\n",
-    "#plt.figure(figsize=(10, 8))\n",
-    "#plt.matshow(df.corr(), fignum=0)\n",
-    "#plt.xticks(range(len(cor_cols)), cor_cols)\n",
-    "#plt.yticks(range(len(cor_cols)), cor_cols)\n",
-    "#plt.colorbar()\n",
-    "#plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((43464, 8), (336, 8))"
+       "((39420, 8), (4380, 8))"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Splitting the dataset so that we treat last two weeks of data as unseen to verify generalisability. \n",
-    "n_hrs = 24*7*2\n",
+    "#Splitting the dataset so that we treat 6 months of data as unseen to verify generalisability. \n",
+    "n_records = len(df)  # Total number of samples\n",
+    "split_index = int(n_records * 0.9)  # Split at 90%\n",
     "\n",
-    "df_train, df_test = df[:-n_hrs], df[-n_hrs:]\n",
+    "df_train, df_test = df[:split_index], df[split_index:]\n",
     "\n",
     "df_train.shape,df_test.shape"
    ]
@@ -850,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +864,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 324,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          pollution           dew          temp         press       wnd_dir  \\\n",
+      "count  39420.000000  39420.000000  39420.000000  39420.000000  39420.000000   \n",
+      "mean       0.095041      0.608338      0.510614      0.462763      0.544216   \n",
+      "std        0.093145      0.212195      0.200450      0.188411      0.312364   \n",
+      "min        0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+      "25%        0.025151      0.426471      0.327869      0.309091      0.333333   \n",
+      "50%        0.068410      0.602941      0.524590      0.454545      0.666667   \n",
+      "75%        0.134809      0.808824      0.688525      0.618182      0.666667   \n",
+      "max        1.000000      1.000000      1.000000      1.000000      1.000000   \n",
+      "\n",
+      "            wnd_spd          snow          rain  \n",
+      "count  39420.000000  39420.000000  39420.000000  \n",
+      "mean       0.040533      0.002170      0.005511  \n",
+      "std        0.084946      0.029685      0.039909  \n",
+      "min        0.000000      0.000000      0.000000  \n",
+      "25%        0.002290      0.000000      0.000000  \n",
+      "50%        0.009160      0.000000      0.000000  \n",
+      "75%        0.038195      0.000000      0.000000  \n",
+      "max        1.000000      1.000000      1.000000  \n",
+      "         pollution          dew         temp        press      wnd_dir  \\\n",
+      "count  4380.000000  4380.000000  4380.000000  4380.000000  4380.000000   \n",
+      "mean      0.090437     0.676209     0.561696     0.461914     0.558828   \n",
+      "std       0.089633     0.202226     0.188692     0.171122     0.328950   \n",
+      "min       0.000000     0.132353     0.147541     0.109091     0.000000   \n",
+      "25%       0.021127     0.500000     0.393443     0.309091     0.333333   \n",
+      "50%       0.063380     0.750000     0.590164     0.454545     0.666667   \n",
+      "75%       0.124748     0.852941     0.721311     0.618182     1.000000   \n",
+      "max       0.525151     0.955882     0.934426     0.836364     1.000000   \n",
+      "\n",
+      "           wnd_spd         snow         rain  \n",
+      "count  4380.000000  4380.000000  4380.000000  \n",
+      "mean      0.035859     0.000008     0.004573  \n",
+      "std       0.090114     0.000560     0.033781  \n",
+      "min       0.000000     0.000000     0.000000  \n",
+      "25%       0.002290     0.000000     0.000000  \n",
+      "50%       0.005349     0.000000     0.000000  \n",
+      "75%       0.024438     0.000000     0.000000  \n",
+      "max       0.753191     0.037037     0.638889  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_train.describe())\n",
+    "print(df_test.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1042,7 @@
        "2010-01-02 04:00:00  0.009912  0.074074   0.0  "
       ]
      },
-     "execution_count": 284,
+     "execution_count": 319,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -1060,57 +1101,57 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2014-12-18 00:00:00</th>\n",
-       "      <td>0.181087</td>\n",
-       "      <td>0.397059</td>\n",
-       "      <td>0.213115</td>\n",
-       "      <td>0.709091</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.002290</td>\n",
+       "      <th>2014-07-02 12:00:00</th>\n",
+       "      <td>0.056338</td>\n",
+       "      <td>0.897059</td>\n",
+       "      <td>0.704918</td>\n",
+       "      <td>0.218182</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.005349</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-12-18 01:00:00</th>\n",
-       "      <td>0.171026</td>\n",
-       "      <td>0.397059</td>\n",
-       "      <td>0.196721</td>\n",
-       "      <td>0.709091</td>\n",
-       "      <td>0.666667</td>\n",
+       "      <th>2014-07-02 13:00:00</th>\n",
+       "      <td>0.064386</td>\n",
+       "      <td>0.897059</td>\n",
+       "      <td>0.721311</td>\n",
+       "      <td>0.218182</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>0.000752</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-12-18 02:00:00</th>\n",
-       "      <td>0.160966</td>\n",
-       "      <td>0.397059</td>\n",
-       "      <td>0.196721</td>\n",
-       "      <td>0.709091</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.003811</td>\n",
+       "      <th>2014-07-02 14:00:00</th>\n",
+       "      <td>0.066398</td>\n",
+       "      <td>0.897059</td>\n",
+       "      <td>0.721311</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.002273</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-12-18 03:00:00</th>\n",
-       "      <td>0.146881</td>\n",
-       "      <td>0.382353</td>\n",
-       "      <td>0.163934</td>\n",
-       "      <td>0.727273</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.006870</td>\n",
+       "      <th>2014-07-02 15:00:00</th>\n",
+       "      <td>0.072435</td>\n",
+       "      <td>0.897059</td>\n",
+       "      <td>0.737705</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.003794</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-12-18 04:00:00</th>\n",
-       "      <td>0.125755</td>\n",
-       "      <td>0.382353</td>\n",
-       "      <td>0.180328</td>\n",
-       "      <td>0.709091</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>0.012219</td>\n",
+       "      <th>2014-07-02 16:00:00</th>\n",
+       "      <td>0.078471</td>\n",
+       "      <td>0.897059</td>\n",
+       "      <td>0.737705</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.005315</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -1121,22 +1162,22 @@
       "text/plain": [
        "                     pollution       dew      temp     press   wnd_dir  \\\n",
        "date                                                                     \n",
-       "2014-12-18 00:00:00   0.181087  0.397059  0.213115  0.709091  0.000000   \n",
-       "2014-12-18 01:00:00   0.171026  0.397059  0.196721  0.709091  0.666667   \n",
-       "2014-12-18 02:00:00   0.160966  0.397059  0.196721  0.709091  0.666667   \n",
-       "2014-12-18 03:00:00   0.146881  0.382353  0.163934  0.727273  0.666667   \n",
-       "2014-12-18 04:00:00   0.125755  0.382353  0.180328  0.709091  0.666667   \n",
+       "2014-07-02 12:00:00   0.056338  0.897059  0.704918  0.218182  0.333333   \n",
+       "2014-07-02 13:00:00   0.064386  0.897059  0.721311  0.218182  1.000000   \n",
+       "2014-07-02 14:00:00   0.066398  0.897059  0.721311  0.200000  1.000000   \n",
+       "2014-07-02 15:00:00   0.072435  0.897059  0.737705  0.200000  1.000000   \n",
+       "2014-07-02 16:00:00   0.078471  0.897059  0.737705  0.200000  1.000000   \n",
        "\n",
        "                      wnd_spd  snow  rain  \n",
        "date                                       \n",
-       "2014-12-18 00:00:00  0.002290   0.0   0.0  \n",
-       "2014-12-18 01:00:00  0.000752   0.0   0.0  \n",
-       "2014-12-18 02:00:00  0.003811   0.0   0.0  \n",
-       "2014-12-18 03:00:00  0.006870   0.0   0.0  \n",
-       "2014-12-18 04:00:00  0.012219   0.0   0.0  "
+       "2014-07-02 12:00:00  0.005349   0.0   0.0  \n",
+       "2014-07-02 13:00:00  0.000752   0.0   0.0  \n",
+       "2014-07-02 14:00:00  0.002273   0.0   0.0  \n",
+       "2014-07-02 15:00:00  0.003794   0.0   0.0  \n",
+       "2014-07-02 16:00:00  0.005315   0.0   0.0  "
       ]
      },
-     "execution_count": 285,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,13 +1199,6 @@
     "with open('../data/test_data.pickle', 'wb') as f:\n",
     "    pickle.dump(df_test, f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
