--- a/imran_v/LSTM_model.ipynb
+++ b/imran_v/LSTM_model.ipynb
@@ -187,7 +187,7 @@
     "## Moving window validation \n",
     "In LSTM models, regular cross-validation methods are not appropriate. This is because cross-validation assumes independence between data points, which does not hold for time series data. In time series models, past values are often highly relevant to predicting future values, as the data exhibits temporal dependencies. Additionally, with traditional cross-validation, there is a risk of data leakage. This occurs when the data is randomly split into training and testing sets, potentially allowing future information to influence the training process. This violates the temporal order of the data, where future values should not be used to predict past ones.\n",
     "\n",
-    "Hence we will use moving window validation instead, which ensures data used when making predictions is only from pasa data\n",
+    "Hence we will use moving window validation instead, which ensures data used when making predictions is only from past data\n",
     "\n"
    ]
   },
@@ -1479,9 +1479,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "#talk about generalisation to larger data sets, parraleism etc"
-   ]
+   "source": []
   }
  ],
  "metadata": {
