--- a/00-EDA/EDA.ipynb
+++ b/00-EDA/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "(43800, 8)"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 367,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "2010-01-02 04:00:00      138.0   -7  -5.0  1022.0      SE     6.25     2     0"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 368,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "(43800, 8)"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 371,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "2010-01-02 04:00:00      138.0   -7  -5.0  1022.0      SE     6.25     2     0"
       ]
      },
-     "execution_count": 309,
+     "execution_count": 372,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "['pollution', 'dew', 'temp', 'press', 'wnd_dir', 'wnd_spd', 'snow', 'rain']"
       ]
      },
-     "execution_count": 310,
+     "execution_count": 373,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "max       27.000000     36.000000  "
       ]
      },
-     "execution_count": 311,
+     "execution_count": 374,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 312,
+     "execution_count": 375,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 376,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "array(['SE', 'cv', 'NW', 'NE'], dtype=object)"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 377,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
        "2010-01-02 04:00:00     0  "
       ]
      },
-     "execution_count": 316,
+     "execution_count": 379,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
        "((39420, 8), (4380, 8))"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 380,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,368 +836,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from pickle import dump\n",
-    "# Create a scaler object\n",
-    "scaler = MinMaxScaler()\n",
-    "df_train = df_train.copy()\n",
-    "df_test = df_test.copy()\n",
     "\n",
-    "# Define the columns to scale\n",
+    "scaler_mv = MinMaxScaler()\n",
+    "df_train_mv = df_train.copy()\n",
+    "df_test_mv = df_test.copy()\n",
+    "\n",
+    "# Define the columns to scale for multivariate\n",
     "columns = (['pollution', 'dew', 'temp', 'press', 'wnd_spd', \n",
     "            'snow', 'rain' , \"wnd_dir\"])\n",
     "\n",
     "#Scale the selected columns to the range 0-1. \n",
     "# We allow the same scaler to be used for test set as this has no risk of data leakage\n",
     "\n",
-    "df_train[columns] = scaler.fit_transform(df_train[columns])\n",
-    "df_test[columns] = scaler.transform(df_test[columns])\n",
+    "df_train_mv[columns] = scaler_mv.fit_transform(df_train_mv[columns])\n",
+    "df_test_mv[columns] = scaler_mv.transform(df_test_mv[columns])\n",
+    "\n",
     "\n",
     "#Save the scaler\n",
-    "dump(scaler, open('../data/scaler.pickle', 'wb'))\n",
+    "dump(scaler_mv, open('../data/scaler_mv.pickle', 'wb'))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need a scaler that only acts on pollution column for univariate "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 383,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler_uv =MinMaxScaler()\n",
+    "df_train_uv = df_train[['pollution']].copy()\n",
+    "df_test_uv = df_test[['pollution']].copy()\n",
+    "\n",
+    "\n",
+    "df_train_uv['pollution'] = scaler_uv.fit_transform(df_train_uv)\n",
+    "df_test_uv['pollution'] = scaler_uv.transform(df_test_uv)\n",
+    "\n",
+    "\n",
+    "#Save the scaler\n",
+    "dump(scaler_uv, open('../data/scaler_uv.pickle', 'wb'))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          pollution           dew          temp         press       wnd_dir  \\\n",
-      "count  39420.000000  39420.000000  39420.000000  39420.000000  39420.000000   \n",
-      "mean       0.095041      0.608338      0.510614      0.462763      0.544216   \n",
-      "std        0.093145      0.212195      0.200450      0.188411      0.312364   \n",
-      "min        0.000000      0.000000      0.000000      0.000000      0.000000   \n",
-      "25%        0.025151      0.426471      0.327869      0.309091      0.333333   \n",
-      "50%        0.068410      0.602941      0.524590      0.454545      0.666667   \n",
-      "75%        0.134809      0.808824      0.688525      0.618182      0.666667   \n",
-      "max        1.000000      1.000000      1.000000      1.000000      1.000000   \n",
-      "\n",
-      "            wnd_spd          snow          rain  \n",
-      "count  39420.000000  39420.000000  39420.000000  \n",
-      "mean       0.040533      0.002170      0.005511  \n",
-      "std        0.084946      0.029685      0.039909  \n",
-      "min        0.000000      0.000000      0.000000  \n",
-      "25%        0.002290      0.000000      0.000000  \n",
-      "50%        0.009160      0.000000      0.000000  \n",
-      "75%        0.038195      0.000000      0.000000  \n",
-      "max        1.000000      1.000000      1.000000  \n",
-      "         pollution          dew         temp        press      wnd_dir  \\\n",
-      "count  4380.000000  4380.000000  4380.000000  4380.000000  4380.000000   \n",
-      "mean      0.090437     0.676209     0.561696     0.461914     0.558828   \n",
-      "std       0.089633     0.202226     0.188692     0.171122     0.328950   \n",
-      "min       0.000000     0.132353     0.147541     0.109091     0.000000   \n",
-      "25%       0.021127     0.500000     0.393443     0.309091     0.333333   \n",
-      "50%       0.063380     0.750000     0.590164     0.454545     0.666667   \n",
-      "75%       0.124748     0.852941     0.721311     0.618182     1.000000   \n",
-      "max       0.525151     0.955882     0.934426     0.836364     1.000000   \n",
-      "\n",
-      "           wnd_spd         snow         rain  \n",
-      "count  4380.000000  4380.000000  4380.000000  \n",
-      "mean      0.035859     0.000008     0.004573  \n",
-      "std       0.090114     0.000560     0.033781  \n",
-      "min       0.000000     0.000000     0.000000  \n",
-      "25%       0.002290     0.000000     0.000000  \n",
-      "50%       0.005349     0.000000     0.000000  \n",
-      "75%       0.024438     0.000000     0.000000  \n",
-      "max       0.753191     0.037037     0.638889  \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df_train.describe())\n",
-    "print(df_test.describe())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 319,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pollution</th>\n",
-       "      <th>dew</th>\n",
-       "      <th>temp</th>\n",
-       "      <th>press</th>\n",
-       "      <th>wnd_dir</th>\n",
-       "      <th>wnd_spd</th>\n",
-       "      <th>snow</th>\n",
-       "      <th>rain</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2010-01-02 00:00:00</th>\n",
-       "      <td>0.129779</td>\n",
-       "      <td>0.352941</td>\n",
-       "      <td>0.245902</td>\n",
-       "      <td>0.527273</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.002290</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-02 01:00:00</th>\n",
-       "      <td>0.148893</td>\n",
-       "      <td>0.367647</td>\n",
-       "      <td>0.245902</td>\n",
-       "      <td>0.527273</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.003811</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-02 02:00:00</th>\n",
-       "      <td>0.159960</td>\n",
-       "      <td>0.426471</td>\n",
-       "      <td>0.229508</td>\n",
-       "      <td>0.545455</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.005332</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-02 03:00:00</th>\n",
-       "      <td>0.182093</td>\n",
-       "      <td>0.485294</td>\n",
-       "      <td>0.229508</td>\n",
-       "      <td>0.563636</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.008391</td>\n",
-       "      <td>0.037037</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-02 04:00:00</th>\n",
-       "      <td>0.138833</td>\n",
-       "      <td>0.485294</td>\n",
-       "      <td>0.229508</td>\n",
-       "      <td>0.563636</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.009912</td>\n",
-       "      <td>0.074074</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     pollution       dew      temp     press   wnd_dir  \\\n",
-       "date                                                                     \n",
-       "2010-01-02 00:00:00   0.129779  0.352941  0.245902  0.527273  0.333333   \n",
-       "2010-01-02 01:00:00   0.148893  0.367647  0.245902  0.527273  0.333333   \n",
-       "2010-01-02 02:00:00   0.159960  0.426471  0.229508  0.545455  0.333333   \n",
-       "2010-01-02 03:00:00   0.182093  0.485294  0.229508  0.563636  0.333333   \n",
-       "2010-01-02 04:00:00   0.138833  0.485294  0.229508  0.563636  0.333333   \n",
-       "\n",
-       "                      wnd_spd      snow  rain  \n",
-       "date                                           \n",
-       "2010-01-02 00:00:00  0.002290  0.000000   0.0  \n",
-       "2010-01-02 01:00:00  0.003811  0.000000   0.0  \n",
-       "2010-01-02 02:00:00  0.005332  0.000000   0.0  \n",
-       "2010-01-02 03:00:00  0.008391  0.037037   0.0  \n",
-       "2010-01-02 04:00:00  0.009912  0.074074   0.0  "
-      ]
-     },
-     "execution_count": 319,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Show the scaled data\n",
-    "df_train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 320,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pollution</th>\n",
-       "      <th>dew</th>\n",
-       "      <th>temp</th>\n",
-       "      <th>press</th>\n",
-       "      <th>wnd_dir</th>\n",
-       "      <th>wnd_spd</th>\n",
-       "      <th>snow</th>\n",
-       "      <th>rain</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2014-07-02 12:00:00</th>\n",
-       "      <td>0.056338</td>\n",
-       "      <td>0.897059</td>\n",
-       "      <td>0.704918</td>\n",
-       "      <td>0.218182</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.005349</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014-07-02 13:00:00</th>\n",
-       "      <td>0.064386</td>\n",
-       "      <td>0.897059</td>\n",
-       "      <td>0.721311</td>\n",
-       "      <td>0.218182</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000752</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014-07-02 14:00:00</th>\n",
-       "      <td>0.066398</td>\n",
-       "      <td>0.897059</td>\n",
-       "      <td>0.721311</td>\n",
-       "      <td>0.200000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.002273</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014-07-02 15:00:00</th>\n",
-       "      <td>0.072435</td>\n",
-       "      <td>0.897059</td>\n",
-       "      <td>0.737705</td>\n",
-       "      <td>0.200000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.003794</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014-07-02 16:00:00</th>\n",
-       "      <td>0.078471</td>\n",
-       "      <td>0.897059</td>\n",
-       "      <td>0.737705</td>\n",
-       "      <td>0.200000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.005315</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     pollution       dew      temp     press   wnd_dir  \\\n",
-       "date                                                                     \n",
-       "2014-07-02 12:00:00   0.056338  0.897059  0.704918  0.218182  0.333333   \n",
-       "2014-07-02 13:00:00   0.064386  0.897059  0.721311  0.218182  1.000000   \n",
-       "2014-07-02 14:00:00   0.066398  0.897059  0.721311  0.200000  1.000000   \n",
-       "2014-07-02 15:00:00   0.072435  0.897059  0.737705  0.200000  1.000000   \n",
-       "2014-07-02 16:00:00   0.078471  0.897059  0.737705  0.200000  1.000000   \n",
-       "\n",
-       "                      wnd_spd  snow  rain  \n",
-       "date                                       \n",
-       "2014-07-02 12:00:00  0.005349   0.0   0.0  \n",
-       "2014-07-02 13:00:00  0.000752   0.0   0.0  \n",
-       "2014-07-02 14:00:00  0.002273   0.0   0.0  \n",
-       "2014-07-02 15:00:00  0.003794   0.0   0.0  \n",
-       "2014-07-02 16:00:00  0.005315   0.0   0.0  "
-      ]
-     },
-     "execution_count": 320,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Show the scaled data\n",
-    "df_test.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('../data/train_data.pickle', 'wb') as f:\n",
-    "    pickle.dump(df_train, f)\n",
+    "    pickle.dump(df_train_mv, f)\n",
     "\n",
     "with open('../data/test_data.pickle', 'wb') as f:\n",
-    "    pickle.dump(df_test, f)"
+    "    pickle.dump(df_test_mv, f)"
    ]
   }
  ],
